<resources>
    <string name="app_name">Mi Tɨtna</string>
    <string name="what_r_y">¿Qué aprenderás hoy?</string>
    <string name="hello_user">Katkimɨzti, Pɨh kamurus</string>
    <string name="your_path">Tus caminos</string>
    <string name="ya_progress">Tú progreso</string>
    <string name="module_1">Módulo I</string>
    <string name="module_2">Módulo II</string>
    <string name="module_3">Módulo III</string>
    <string name="module_4">Módulo IV</string>
    <string name="module_5">Módulo V</string>
    <string name="home">Inicio</string>
    <string name="graphs">Análisis</string>
    <string name="user">Usuario</string>
    <string name="empty"> </string>
    <string name="games">Juegos</string>
    <string name="empty_string" translatable="false" />
    <string name="quit">Salir</string>
    <string name="continue_str">Continuar</string>
    <string name="try_again">Intentar de nuevo</string>
    <string name="success">Success</string>
    <string name="failed">Fallado</string>
    <string name="error">Error</string>
    <string name="settings">Configuración</string>
    <string name="notification">Notificación</string>
    <string name="exercises_fragment_title">Learn Spanish</string>
    <string name="lessons_fragment_title">Lecciones</string>
    <string name="quiz_fragment_title">Quiz</string>
    <string name="settings_fragment_title">Configuración</string>
    <string name="no_lesson_available">No hay una lección disponible para estos ejercicios</string>
    <string name="phonetics">[%1$s]</string>
    <string name="lesson_is_locked_msg">Completa las lecciones anteriores para avanzar hasta aquí!</string>
    <string name="check_answer_btn_title">Check</string>
    <string name="enter_answer_hint">Introduce una respuesta</string>
    <string name="correct_answer_msg">CORRECTO!</string>
    <string name="wrong_answer_msg">INCORRECTO :(</string>
    <string name="display_correct_answer">La respuesta correcta es : %1$s</string>
    <string name="life_line_in_quiz_content_description">Life line in quiz</string>
    <string name="close_quiz_dialog_title">Estás seguro?</string>
    <string name="close_quiz_dialog_message">Todo tú progreso en el quiz se perderá</string>
    <string name="xp_points_gain">PRÁCTICA COMPLETADA! %1$s XP</string>
    <string name="total_xp">XP TOTAL = %1$d XP</string>
    <string name="streak_count">RACHA = %1$d</string>
    <string name="preference_notification_title">Practice reminder</string>
    <string name="preference_notification_time_title">Practice reminder time</string>
    <string name="notification_title">Practice Time</string>
    <string name="notification_message">It\'s time to brush up your Spanish skills</string>
    <string name="notification_channel_name">Learn Spanish</string>
    <string name="notification_channel_description">App that helps you learn Spanish</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="w">W</string>
    <string name="S">S</string>
    <string name="racha">Racha de Éxito</string>
    <string name="action_add">Add</string>
    <string name="action_add_exercise_description">Add exercise</string>
    <string name="action_add_tag_description">Add tag</string>
    <string name="action_all_exercises">All Exercises</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_exercise_list">Exercise List</string>
    <string name="action_filter_all">All</string>
    <string name="action_filter_correct">Correct</string>
    <string name="action_filter_incorrect">Incorrect</string>
    <string name="action_import_exercises">Import exercises</string>
    <string name="action_select_a_file">Select a file</string>
    <string name="action_show_me_the_help">Show me the help</string>
    <string name="action_less_practiced_exercises">Less practiced exercises</string>
    <string name="action_listen">Listen</string>
    <string name="action_most_failed_exercises">Most Failed Exercises</string>
    <string name="action_next">Next</string>
    <string name="action_no">No</string>
    <string name="action_practice">Practice</string>
    <string name="action_previous">Previous</string>
    <string name="action_random_exercises">Random Exercises</string>
    <string name="action_save">Save</string>
    <string name="action_scroll_to_top_description">Scroll to top</string>
    <string name="action_select_a_filter">Select a filter</string>
    <string name="action_select_tag">Select One Tag</string>
    <string name="action_settings">Settings</string>
    <string name="action_short_alphabetically_asc">Alphabetically ascending</string>
    <string name="action_short_alphabetically_desc">Alphabetically descending</string>
    <string name="action_short_correct">More correct</string>
    <string name="action_short_incorrect">More incorrect</string>
    <string name="action_show_exercise_attempts">Show attempts</string>
    <string name="action_show_exercise_incorrect_attempts">Show incorrect attempts</string>
    <string name="action_sort_less_practiced">Less practiced</string>
    <string name="action_sort_more_practice">More practiced</string>
    <string name="action_sort_success_rate_asc">Success rate ascending</string>
    <string name="action_sort_success_rate_desc">Success rate descending</string>
    <string name="action_speak">Speak</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_tag_list">Tag List</string>
    <string name="action_word_list">Word List</string>
    <string name="action_yes">Yes</string>
    <string name="exercise_list_menu_button_description">Menu button</string>
    <string name="exercise_result_description">Exercise result</string>
    <string name="msg_delete_exercise_attempt_confirmation">Are you sure you want to delete the exercise attempt?</string>
    <string name="msg_delete_exercise_confirmation">Are you sure you want to delete the exercise?</string>
    <string name="msg_delete_selected_exercises_confirmation">Are you sure you want to delete the selected exercises?</string>
    <string name="msg_delete_selected_tags_confirmation">Are you sure you want to delete the selected tags?</string>
    <string name="msg_delete_tag_confirmation">Are you sure you want to delete this tag?</string>
    <string name="msg_error_cannot_be_empty">Cannot be empty</string>
    <string name="msg_error_initialization_failed">TTS Initialization failed!</string>
    <string name="msg_error_speech_recognizer_insufficient_permissions">Make sure the Google app has permission to record audio</string>
    <string name="msg_error_tts">Error in the Text to Speech engine</string>
    <string name="msg_error_voice_recognition_not_supported">Voice recognition is not supported</string>
    <string name="msg_rationale_permission_record_audio">This application needs to record audio for voice recognition.</string>
    <string name="msg_read_exercise_sentence">Read the exercise sentence</string>
    <string name="msg_replace_previous_exercises">Do you want to replace all the previous exercises?</string>
    <string name="number_format">%1$,d</string>
    <string name="msg_exercises_imported_successfully">%1$,d exercises imported successfully</string>
    <string name="msg_exercises_exported_successfully">%1$,d exercises exported successfully</string>
    <string name="percent_format">%1$d%%</string>
    <string name="practice_fragment_label">Speaking Practice</string>
    <string name="pref_collect_statistics" translatable="false">collect_statistics</string>
    <string name="pref_daily_goal">daily_goal</string>
    <string name="pref_enable_sound">enable_sound</string>
    <string name="pref_enable_speak_phrase">enable_speak_phrase</string>
    <string name="pref_enable_move_to_next_exercise">enable_move_next_exercise</string>
    <string name="pref_exercises_per_round" translatable="false">exercises_per_round</string>
    <string name="pref_privacy_policy">Privacy policy</string>
    <string name="summary_collect_statistics">Submit anonymous usage statistics and error reports to help improve this app. No personal data will be collected.</string>
    <string name="summary_daily_goal">Set the number of exercises for your daily goal.</string>
    <string name="summary_enable_sound">Play sounds when practice exercises.</string>
    <string name="summary_enable_speak_phrase">Automatically speak the phrase when you practice the exercises.</string>
    <string name="summary_enable_move_to_next_exercise">Automatically move to the next exercise when the result of the exercise is correct.</string>
    <string name="summary_exercises_per_round">Set the number of exercises per round when practice random or less practiced exercises.</string>
    <string name="title_about_me">About Me</string>
    <string name="title_add_exercise">Add New Exercise</string>
    <string name="title_add_tag">Add New Tag</string>
    <string name="title_changelog">Changelog</string>
    <string name="title_collect_statistics">Improve this app</string>
    <string name="title_confirmation">Confirmation</string>
    <string name="title_correct">Correct</string>
    <string name="title_daily_goal">Daily goal</string>
    <string name="title_daily_goal_achieved">DAILY GOAL ACHIEVED</string>
    <string name="title_date_and_time">Date and time</string>
    <string name="title_edit_exercise">Edit Exercise</string>
    <string name="title_edit_tag">Edit Tag</string>
    <string name="title_empty_attempt_list_day">You haven\'t practiced any exercises this day</string>
    <string name="title_empty_attempt_list_exercise">You haven\'t practiced this exercise yet</string>
    <string name="title_empty_exercise_list">You haven\'t created any exercises yet</string>
    <string name="title_empty_tag_list">You haven\'t created any tags yet</string>
    <string name="title_empty_word_list">You haven\'t practiced any exercises yet</string>
    <string name="title_enable_sound">Enable sound</string>
    <string name="title_enable_speak_phrase">Speak the phrase</string>
    <string name="title_enable_move_to_next_exercise">Move to the next exercise</string>
    <string name="title_exercise_correct">CORRECT</string>
    <string name="title_exercise_filter_all">All</string>
    <string name="title_exercise_filter_an_exercise">Practice An Exercise</string>
    <string name="abt_tit">Sobre Mi Tɨtna</string>
    <string name="desc">Con norte en brindar nuevos sentidos a la educación, varias entidades con influencia nacional (MEN, ACIPAP INKAL AWÁ) tuvieron por necesario el aprovechar la tecnología para mejorar todo lo que a educación concierne; esta aplicación nace como fruto de los PEC (Proyectos Educativos Comunitarios), y como foco para esta ocasión tenemos a la comunidad Awá con su lengua materna Awá Pit.</string>
    <string name="desc2a">Desarrollamos la aplicación Mi Tɨtna para propiciar una «revitalización» al Awá Pit, una lengua en peligro de extinción; las poblaciones son principalmente nativos Awá, pues se pretende fortalecer este mantenimiento lingüístico desde sus raíces. Encontramos responsable a la alianza entre la Asociación de Cabildos Indígenas del Pueblo Awá del Putumayo y el MEN (contrato interadministrativo N.º 2021–027), por permitir los primeros avances a esta aplicación.</string>
    <string name="mi_camino_al_recuerdo">MI CAMINO AL RECUERDO</string>
    <string name="regresar">Regresar</string>
    <string name="comenzar">Comenzar</string>
    <string name="ma">M</string>
    <string name="sa">S</string>
    <string name="wa">W</string>
    <string name="ta">T</string>
    <string name="fa">F</string>
</resources>