<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_a"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mititna.ui.fragments.PrincipalScreenFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_principal_screen"
        />

    <fragment
        android:id="@+id/navigation_charts"
        android:name="com.example.mititna.ui.charts.Charts"
        android:label="@string/graphs"
        tools:layout="@layout/fragment_charts"
        />

    <fragment
        android:id="@+id/navigation_games"
        android:label="@string/games"
        android:name="com.example.mititna.ui.fragments.GamesFragment"
        tools:layout="@layout/fragment_games"
        />

    <fragment
        android:id="@+id/navigation_user"
        android:label="@string/user"
        android:name="com.example.mititna.ui.fragments.UserFragment"
        tools:layout="@layout/fragment_user"
        />
</navigation>